--- a/app/src/main/res/layout/activity_blog.xml
+++ b/app/src/main/res/layout/activity_blog.xml
@@ -25,5 +25,10 @@
             app:layout_constraintTop_toBottomOf="@+id/title"
             tools:text="Some description \ndssdffasf\nadddfasdf"/>
 
+    <FrameLayout
+        android:id="@+id/m_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
 </android.support.constraint.ConstraintLayout>
