--- a/app/src/main/res/layout/fragment_create_blog.xml
+++ b/app/src/main/res/layout/fragment_create_blog.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="8dp"
+    tools:context=".ui.fragment.CreateBlogFragment">
+
+    <ImageView
+        android:id="@+id/m_icon"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        tools:context=".ui.fragment.CreateBlogFragment">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content" />
 
     <EditText
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/title"
-            android:textSize="24sp"
-            android:maxLines="1"
-            android:background="@null"/>
+        android:id="@+id/m_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="@string/title"
+        android:maxLines="1"
+        android:textSize="24sp" />
 
     <EditText
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/description"
-            android:background="@null"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/title"/>
+        android:id="@+id/m_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@null"
+        android:hint="@string/description"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
 
 </android.support.constraint.ConstraintLayout>
