--- a/app/src/main/res/layout/fragment_user_small_inforgation.xml
+++ b/app/src/main/res/layout/fragment_user_small_inforgation.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".ui.fragment.UserSmallInformationFragment">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/m_icon"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        app:civ_circle_background_color="@color/colorPrimary" />
-
-    <TextView
-        android:id="@+id/m_name"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/m_icon"
-        tools:text="Tools" />
+        android:padding="8dp"
+        tools:context=".ui.fragment.UserSmallInformationFragment">
 
-</android.support.constraint.ConstraintLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/m_icon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            app:civ_circle_background_color="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/m_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toRightOf="@id/m_icon"
+            tools:text="Tools" />
+
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
