--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
-            android:id="@+id/save"
-            android:icon="@drawable/ic_check"
-            android:enabled="true"
-            app:showAsAction="always"
-            tools:ignore="MenuTitle"/>
+        android:id="@+id/m_save"
+        android:enabled="true"
+        android:icon="@drawable/ic_check"
+        app:showAsAction="always"
+        tools:ignore="MenuTitle" />
+
+    <item
+        android:id="@+id/m_image"
+        android:enabled="true"
+        android:icon="@drawable/ic_image"
+        app:showAsAction="always"
+        tools:ignore="MenuTitle" />
 </menu>
