registration fix, sign out, Blog details, fix bugs

--- a/app/src/main/res/layout/base_blog_details_fragment.xml
+++ b/app/src/main/res/layout/base_blog_details_fragment.xml
@@ -7,29 +7,38 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp"
-        tools:context=".ui.fragment.CreateBlogFragment">
+        android:orientation="vertical">
 
-        <EditText
+
+        <ImageView
+            android:id="@+id/m_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp" />
+
+        <TextView
             android:id="@+id/m_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:hint="@string/title"
-            android:maxLines="1"
-            android:textSize="24sp" />
+            android:padding="8dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:text="Some title" />
 
-        <EditText
+        <TextView
             android:id="@+id/m_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@null"
-            android:hint="@string/description" />
+            android:padding="8dp"
+            tools:text="Some description \ndssdffasf\nadddfasdf" />
 
-        <ImageView
-            android:id="@+id/m_icon"
+        <FrameLayout
+            android:id="@+id/m_footer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:id="@+id/m_footer_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
