--- a/app/src/main/res/layout/fragment_user_small_inforgation.xml
+++ b/app/src/main/res/layout/fragment_user_small_inforgation.xml
@@ -16,7 +16,8 @@
             android:id="@+id/m_icon"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            app:civ_circle_background_color="@color/colorPrimary" />
+            app:civ_circle_background_color="@color/colorPrimary"
+            tools:background="@color/cardview_dark_background" />
 
         <TextView
             android:id="@+id/m_name"
@@ -24,6 +25,16 @@
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toRightOf="@id/m_icon"
             tools:text="Tools" />
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/m_icon">
+
+            <include layout="@layout/item_rating" />
+
+        </FrameLayout>
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
