--- a/app/src/main/res/layout/item_base_blog.xml
+++ b/app/src/main/res/layout/item_base_blog.xml
@@ -3,9 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="4dp"
-    tools:context=".ui.activity.BlogActivity">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/m_icon"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/title"
@@ -14,20 +18,28 @@
         android:maxLines="1"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/m_icon"
         tools:text="Some title" />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lines="5"
+        android:lines="2"
         app:layout_constraintTop_toBottomOf="@+id/title"
         tools:text="Some description \ndssdffasf\nadddfasdf" />
 
-    <FrameLayout
-        android:id="@+id/m_container"
-        android:layout_width="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
 
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintTop_toBottomOf="@+id/date" />
 </android.support.constraint.ConstraintLayout>
