--- a/app/src/main/res/layout/fragment_blogs.xml
+++ b/app/src/main/res/layout/fragment_blogs.xml
@@ -5,9 +5,17 @@
              android:layout_height="match_parent"
              tools:context=".ui.fragment.BlogsFragment">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/m_swipe_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </FrameLayout>
