--- a/app/src/main/res/menu/menu_user.xml
+++ b/app/src/main/res/menu/menu_user.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/m_logout"
         android:enabled="true"
         android:icon="@drawable/ic_logout"
-        app:showAsAction="always"
-        tools:ignore="MenuTitle" />
+        android:title="@string/exit"
+        app:showAsAction="always" />
 
 </menu>
