--- a/app/src/main/res/layout/base_blog_details_fragment.xml
+++ b/app/src/main/res/layout/base_blog_details_fragment.xml
@@ -13,7 +13,8 @@
         <ImageView
             android:id="@+id/m_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
             android:padding="8dp" />
 
         <TextView
