--- a/app/src/main/res/layout/fragment_create_blog.xml
+++ b/app/src/main/res/layout/fragment_create_blog.xml
@@ -31,7 +31,8 @@
         <ImageView
             android:id="@+id/m_icon"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="200dp"
+            android:scaleType="centerCrop" />
 
     </LinearLayout>
 </ScrollView>
